--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <table style="border: 2px solid red;">
+        <tr>
+            <th>Grocery</th>
+            <th>Electric</th>
+            <th>Clothing</th>
+        </tr>
+        <tr>
+            <td>Rice</td>
+            <td>Mobile</td>
+            <td>t-shirt</td>
+        </tr>
+    </table>
 </body>
 </html>
